--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 </div><div class="item">
   <div class="pub-title">AI Mathematician as a Partner in Advancing Mathematical Discovery - A Case Study in Homogenization Theory</div>
   <div class="small">Yuanhang Liu, Beichen Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ICAIS 2025</span>. [<a href="https://arxiv.org/abs/2510.26380">arXiv</a>] [<a href="https://ai-mathematician.net/en/posts/homogenization.theory/">Blog</a>]</div>
-  
+  <div class="hl-line"><span class="hl">ICAIS 2025 Responsible AI Research Award</span></div>
 </div><div class="item">
   <div class="pub-title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</div>
   <div class="small">Ziyue Wang, Chi Chen, Fuwen Luo, Yurui Dong, Yuanchi Zhang, Yuzhuang Xu, Xiaolong Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ACL 2025</span>, 7605-7633. [<a href="https://aclanthology.org/2025.acl-long.376.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2410.04659">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ActiView">code</a>]</div>
@@ -847,7 +847,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Nov 11, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Nov 24, 2025</span></div>
     </footer>
   </div>
 
