--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
   <div class="small">Yuanhang Liu, Beichen Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ICAIS 2025</span>. [<a href="https://arxiv.org/abs/2510.26380">arXiv</a>] [<a href="https://ai-mathematician.net/en/posts/homogenization.theory/">Blog</a>]</div>
   <div class="hl-line"><span class="hl">ICAIS 2025 Responsible AI Research Award</span></div>
 </div><div class="item">
+  <div class="pub-title">Pessimistic Verification for Open Ended Math Questions</div>
+  <div class="small">Yanxing Huang, Zihan Tang, Zejin Lin, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2511.21522">arXiv</a>]</div>
+  
+</div><div class="item">
   <div class="pub-title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</div>
   <div class="small">Ziyue Wang, Chi Chen, Fuwen Luo, Yurui Dong, Yuanchi Zhang, Yuzhuang Xu, Xiaolong Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ACL 2025</span>, 7605-7633. [<a href="https://aclanthology.org/2025.acl-long.376.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2410.04659">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ActiView">code</a>]</div>
   
@@ -847,7 +851,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Nov 24, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Nov 27, 2025</span></div>
     </footer>
   </div>
 
