--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
   <div class="pub-title">Writing-RL: Advancing Long-form Writing via Adaptive Curriculum Reinforcement Learning</div>
   <div class="small">Xuanyu Lei, Chenliang Li, Yuning Wu, Kaiming Liu, Weizhou Shen, <strong>Peng Li</strong>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2506.05760">arXiv</a>] [<a href="https://github.com/Tongyi-Zhiwen/Writing-RL">code</a>]</div>
   
+</div><div class="item">
+  <div class="pub-title">VideoChat-M1: Collaborative Policy Planning for Video Understanding via Multi-Agent Reinforcement Learning</div>
+  <div class="small">Boyu Chen, Zikang Wang, Zhengrong Yue, Kainan Yan, Chenyun Yu, Yi Huang, Zijun Liu, Yafei Wen, Xiaoxin Chen, Yang Liu, <strong>Peng Li</strong>, Yali Wang. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2511.19524">arXiv</a>]</div>
+  
 </div>
     </div>
   </div>
@@ -837,6 +841,7 @@
           <li><strong>Demonstration Chair</strong>: CCL (2024)</li>
           <li><strong>Frontier Forum Chair</strong>: CCMT (2024)</li>
           <li><strong>Publicity Chair</strong>: CCL (2025)</li>
+          <li><strong>Student Symposium Chair</strong>: CCL (2026)</li>
           <li><strong>Reviewer / PC Member</strong>: NeurIPS (2022–2025), ICML (2022–2025), ICLR (2024–2025), ACL (2014, 2021–2023), EMNLP (2014, 2021–2023, 2025), NAACL (2018), CVPR (2023–2025<!--2026-->), ICCV (2023, 2025), ECCV (2024), AAAI (2022–2025), IJCAI (2022–2024), COLING (2020, 2024, 2025), BMVC (2024), COLM (2024–2025), ICRA (2025-2026), ACM TIST (2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
         </ul>
       </div>
@@ -851,7 +856,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Nov 27, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Dec 04, 2025</span></div>
     </footer>
   </div>
 
