--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
   <div class="pub-title">VideoChat-M1: Collaborative Policy Planning for Video Understanding via Multi-Agent Reinforcement Learning</div>
   <div class="small">Boyu Chen, Zikang Wang, Zhengrong Yue, Kainan Yan, Chenyun Yu, Yi Huang, Zijun Liu, Yafei Wen, Xiaoxin Chen, Yang Liu, <strong>Peng Li</strong>, Yali Wang. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2511.19524">arXiv</a>]</div>
   
+</div><div class="item">
+  <div class="pub-title">Interactive Visual Assessment for Text-to-Image Generation Models</div>
+  <div class="small">Xiaoyue Mi, Fan Tang, Juan Cao, Qiang Sheng, Ziyao Huang, <strong>Peng Li</strong>, Yang Liu, Tong-Yee Lee. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2411.15509">arXiv</a>]</div>
+  
+</div><div class="item">
+  <div class="pub-title">Unveiling Over-Memorization in Finetuning LLMs for Reasoning Tasks</div>
+  <div class="small">Zhiwen Ruan, Yun Chen, Yutao Hou, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2508.04117">arXiv</a>]</div>
+  
+</div><div class="item">
+  <div class="pub-title">Enhancing Large Language Model Reasoning via Selective Critical Token Fine-Tuning</div>
+  <div class="small">Zhiwen Ruan, Yixia Li, He Zhu, Yun Chen, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2510.10974">arXiv</a>]</div>
+  
 </div>
     </div>
   </div>
@@ -856,7 +868,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Dec 04, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Dec 07, 2025</span></div>
     </footer>
   </div>
 
