--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Peng Li — Research Associate Professor</title>
-  <meta name="description" content="Peng Li is a Research Associate Professor at Tsinghua University's Institute for AI Industry Research (AIR). Research interests: LLMs, LLM-based agents, AI4Math." />
+  <meta name="description" content="Peng Li is a Research Associate Professor at Tsinghua University's Institute for AI Industry Research (AIR). Research interests: LLMs, LLM-based Agents, AI4Math, MLLMs." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🎓</text></svg>"> 
   <style>
     :root{ --bg:#ffffff; --fg:#1b1f24; --muted:#5c6672; --link:#3462DB; --link-visited:#5B2C6F; --card:#f7f9fc; --border:#e5e7eb; --accent:#0ea5e9; }
@@ -118,10 +118,10 @@
         Peng Li is a Research Associate Professor at the Institute for AI Industry Research (AIR), Tsinghua University. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning (IDL), Baidu Inc. His research spans Large Language Models (LLMs), LLM-based Agents, AI for mathematics (AI4Math), and Multimodal Large Language Models (MLLMs). He has published over 90 papers in top-tier venues and received the Outstanding Paper Award at ACL 2023. His work ranks first on several influential benchmarks, surpassing teams from Google Research and OpenAI. He has led major scientific research projects, including a key task under the National Science and Technology Innovation - Major Program and the National Natural Science Foundation of China (NSFC) General Program. He has also served as an Area Chair for top-tier international conferences such as ACL, EMNLP, and NAACL. His research has been deployed in Baidu and WeChat, reaching tens of millions of users. He received the First Prize of the Qian Weichang Chinese Information Processing Science and Technology Award by the Chinese Information Processing Society of China (CIPS).
       </p>
       <div class="chips" aria-label="research areas">
-        <span class="chip">Large Language Models (LLMs)</span>
+        <span class="chip">LLMs</span>
         <span class="chip">LLM-based Agents</span>
         <span class="chip">AI4Math</span>
-        <span class="chip">Multimodal Large Language Models (MLLMs)</span>
+        <span class="chip">MLLMs</span>
       </div>
       <p class="small" style="margin-top:10px"><strong>Address:</strong> 11/F, Block C, Qidi Science & Technology Building, Tsinghua Science Park, Haidian District, Beijing</p>
     </section>
