--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   
 </div><div class="item">
   <div class="pub-title">Rethinking Long Context Generation from the Continual Learning Perspective</div>
-  <div class="small">Zeyuan Yang, Fangzhou Xiong, <strong>Peng Li</strong> and Yang Liu. <span class="pub-venue">COLING 2025</span>, 1922-1933. [<a href="https://aclanthology.org/2025.coling-main.131.pdf">pdf</a>]</div>
+  <div class="small">Zeyuan Yang, Fangzhou Xiong, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">COLING 2025</span>, 1922-1933. [<a href="https://aclanthology.org/2025.coling-main.131.pdf">pdf</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">Leveraging Language-based Representations for Better Solving Symbol-related Problems with Large Language Models</div>
@@ -850,7 +850,7 @@
           <li><strong>Frontier Forum Chair</strong>: CCMT (2024)</li>
           <li><strong>Publicity Chair</strong>: CCL (2025)</li>
           <li><strong>Student Symposium Chair</strong>: CCL (2026)</li>
-          <li><strong>Reviewer / PC Member</strong>: NeurIPS (2022–2025), ICML (2022–2025), ICLR (2024–2025), ACL (2014, 2021–2023), EMNLP (2014, 2021–2023, 2025), NAACL (2018), CVPR (2023–2025<!--2026-->), ICCV (2023, 2025), ECCV (2024), AAAI (2022–2025), IJCAI (2022–2024), COLING (2020, 2024, 2025), BMVC (2024), COLM (2024–2025), ICRA (2025-2026), ACM TIST (2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
+          <li><strong>Reviewer / PC Member</strong>: NeurIPS (2022–2025), ICML (2022–2025<!--2026-->), ICLR (2024–2025), ACL (2014, 2021–2023), EMNLP (2014, 2021–2023, 2025), NAACL (2018), CVPR (2023–2026), ICCV (2023, 2025), ECCV (2024), AAAI (2022–2025), IJCAI (2022–2024), COLING (2020, 2024, 2025), BMVC (2024), COLM (2024–2025), ICRA (2025-2026), ACM TIST (2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
         </ul>
       </div>
     </section>
@@ -864,7 +864,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Dec 08, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Dec 21, 2025</span></div>
     </footer>
   </div>
 
