--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   
 </div><div class="item">
   <div class="pub-title">Bench4Merge: A Comprehensive Benchmark for Merging in Realistic Dense Traffic with Micro-Interactive Vehicles</div>
-  <div class="small">Zhengming Wang, Junli Wang, Pengfei Li, Zhaohan Li, Chunyang Liu, Bo Zhang, <strong>Peng Li</strong>, Yilun Chen. <span class="pub-venue">IROS 2025</span>. [<a href="https://arxiv.org/abs/2410.15912">arXiv</a>] [<a href="https://github.com/WZM5853/Bench4Merge">code</a>] [<a href="videos/Bench4Merge.mp4">Video</a>]</div>
+  <div class="small">Zhengming Wang, Junli Wang, Pengfei Li, Zhaohan Li, Chunyang Liu, Bo Zhang, <strong>Peng Li</strong>, Yilun Chen. <span class="pub-venue">IROS 2025</span>, 8910-8917. [<a href="https://ieeexplore.ieee.org/document/11247075">pdf</a>] [<a href="https://arxiv.org/abs/2410.15912">arXiv</a>] [<a href="https://github.com/WZM5853/Bench4Merge">code</a>] [<a href="videos/Bench4Merge.mp4">Video</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">EditEval: Towards Comprehensive and Automatic Evaluation for Text-guided Video Editing</div>
@@ -864,7 +864,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Dec 21, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Jan 05, 2026</span></div>
     </footer>
   </div>
 
