--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
   <div class="two-col">
     <div class="list">
       <div class="item">
+  <div class="pub-title">Enabling Stroke-Level Structural Analysis of Hieroglyphic Scripts without Language-Specific Priors</div>
+  <div class="small">Fuwen Luo, Zihao Wan, Ziyue Wang, Yaluo Liu, Pau Tong Lin Xu, Xuanjia Qiao, Xiaolong Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2601.05508">arXiv</a>] [<a href="https://github.com/THUNLP-MT/HieroSA">code</a>] [<a href="https://huggingface.co/roufaen/HieroSA">Hugging Face</a>]</div>
+  
+</div><div class="item">
   <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
   <div class="small">Xiaoyue Mi, Fan Tang, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
   
@@ -864,7 +868,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Jan 05, 2026</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Jan 12, 2026</span></div>
     </footer>
   </div>
 
