--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   
 </div><div class="item">
   <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
-  <div class="small">Xiaoyue Mi, Fan Tang, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
+  <div class="small">Xiaoyue Mi, Fan Tang, You Wu, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
   
 </div>
     </div>
@@ -868,7 +868,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Jan 12, 2026</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Jan 17, 2026</span></div>
     </footer>
   </div>
 
