--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
   <div class="small">Fuwen Luo, Zihao Wan, Ziyue Wang, Yaluo Liu, Pau Tong Lin Xu, Xuanjia Qiao, Xiaolong Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2601.05508">arXiv</a>] [<a href="https://github.com/THUNLP-MT/HieroSA">code</a>] [<a href="https://huggingface.co/roufaen/HieroSA">Hugging Face</a>]</div>
   
 </div><div class="item">
+  <div class="pub-title">StreamingBench: Assessing the Gap for MLLMs to Achieve Streaming Video Understanding</div>
+  <div class="small">Junming Lin, Zheng Fang, Chi Chen, Haoxuan Cheng, Zihao Wan, Fuwen Luo, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu, Maosong Sun. <span class="pub-venue">ICASSP 2026</span>. [<a href="https://arxiv.org/abs/2411.03628">arXiv</a>] [<a href="https://github.com/THUNLP-MT/StreamingBench">code</a>] [<a href="https://streamingbench.github.io/">Project Webpage</a>]</div>
+  
+</div><div class="item">
   <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
   <div class="small">Xiaoyue Mi, Fan Tang, You Wu, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
   
@@ -390,10 +394,6 @@
 </div><div class="item">
   <div class="pub-title">Enabling Weak LLMs to Judge Response Reliability via Meta Ranking</div>
   <div class="small">Zijun Liu, Boqun Kou, <strong>Peng Li</strong>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</div>
-  
-</div><div class="item">
-  <div class="pub-title">StreamingBench: Assessing the Gap for MLLMs to Achieve Streaming Video Understanding</div>
-  <div class="small">Junming Lin, Zheng Fang, Chi Chen, Zihao Wan, Fuwen Luo, <strong>Peng Li</strong>, Yang Liu, Maosong Sun. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2411.03628">arXiv</a>] [<a href="https://github.com/THUNLP-MT/StreamingBench">code</a>] [<a href="https://streamingbench.github.io/">Project Webpage</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">Agent Hospital: A Simulacrum of Hospital with Evolvable Medical Agents</div>
@@ -868,7 +868,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Jan 17, 2026</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Jan 18, 2026</span></div>
     </footer>
   </div>
 
