--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   
 </div><div class="item">
   <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
-  <div class="small">Xiaoyue Mi, Fan Tang, You Wu, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
+  <div class="small">Xiaoyue Mi, Fan Tang, You Wu, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AAAI 2026 Special Track on AI for Social Impact (AISI)</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
   
 </div>
     </div>
@@ -249,11 +249,11 @@
   
 </div><div class="item">
   <div class="pub-title">Beyond the Surface: Enhancing LLM-as-a-Judge Alignment with Human via Internal Representations</div>
-  <div class="small">Peng Lai, Jianjie Zheng, Sijie Cheng, Yun Chen, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">NeurIPS 2025</span>. </div>
+  <div class="small">Peng Lai, Jianjie Zheng, Sijie Cheng, Yun Chen, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">NeurIPS 2025</span>. [<a href="https://arxiv.org/abs/2508.03550">arXiv</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">Bridging Vision, Language, and Mathematics: Pictographic Character Reconstruction with Bézier Curves</div>
-  <div class="small">Zihao Wan, Pau Tong Lin Xu, Fuwen Luo, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">The 5th Workshop on Mathematical Reasoning and AI (MATH-AI 2025)</span>. </div>
+  <div class="small">Zihao Wan, Pau Tong Lin Xu, Fuwen Luo, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">The 5th Workshop on Mathematical Reasoning and AI (MATH-AI 2025)</span>. [<a href="https://openreview.net/pdf?id=NY86zPKILj">pdf</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">MUSEG: Reinforcing Video Temporal Understanding via Timestamp-Aware Multi-Segment Grounding</div>
